Fix Hospital.java